--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="assets/logo-white.svg">
     <link rel="stylesheet" href="/styles/style.css">
     <title>Garage Code</title>
 </head>
@@ -29,6 +30,12 @@
             <a href="#" class="course-button"><img src="assets/icons/UI_UX-icon.png" alt="" class="icon course-icon">UI / UX</a>
             <a href="#" class="course-button"><img src="assets/icons/project-icon.svg" alt="" class="icon course-icon">Проектная деятельность</a>
         </nav>
+
+        <section class="main-banner">
+            <h1 class="title">Не просто <br> школа, а <br> целая семья</h1>
+            <p class="subtitle">Мы строим будущее, стирая границы.<br>Новый подход к обучению</p>
+            <a href="#" class="button">узнать больше</a>
+        </section>
 
         
 
