--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 </head>
 <body>
     
+
+
 <div class="container">
         <header class="header">
             <img src="assets/logo.svg" alt="" class="logo">
@@ -26,10 +28,11 @@
             <a href="#" class="course-button black-bg">Главная</a>
             <a href="#" class="course-button"><img src="assets/icons/dev-icon.svg" alt="" class="icon course-icon">Разработка</a>
             <a href="#" class="course-button"><img src="assets/icons/grap_des-icon.svg" alt="" class="icon course-icon">Графический дизайн</a>
+            <a href="#" class="course-button"><img src="assets/icons/book-icon.svg" alt="" class="icon course-icon">Таджвид</a>
+
             <a href="#" class="course-button"><img src="assets/icons/3D-icon.svg" alt="" class="icon course-icon">3D - Моделирование</a>
             <!-- <a href="#" class="course-button"><img src="assets/icons/UI_UX-icon.png" alt="" class="icon course-icon">UI / UX</a> -->
             <!-- <a href="#" class="course-button"><img src="assets/icons/project-icon.svg" alt="" class="icon course-icon">Проектная деятельность</a> -->
-            <a href="#" class="course-button"><img src="assets/icons/book-icon.svg" alt="" class="icon course-icon">Таджвид</a>
 
         </nav>
 
@@ -55,7 +58,7 @@
 
         <h2 class="title section-title">ОБУЧЕНИЕ</h2>
 
-        <section class="course-banner">
+        <section class="course-banner web-banner">
             <div class="course-top">
                 <a href="#" class="capsule-button">90 минут занятие</a>
                 <a href="#" class="capsule-button">6 месяцев обучение</a>
@@ -234,6 +237,13 @@
                 <h6 class="footer-title">партнёрам</h6>
                 <a href="#" class="footer-link">стать частью команды</a>
                 <a href="#" class="footer-link">стать партнёром</a>
+            <div class="social__inner">
+                <a href="#" class="social"><img src="assets/icons/vk-icon.svg" alt=""></a>
+                <a href="#" class="social"><img src="assets/icons/insta-icon.svg" alt=""></a>
+                <a href="#" class="social"><img src="assets/icons/whatsapp-icon.svg" alt=""></a>
+                <a href="#" class="social"><img src="assets/icons/tg-icon.svg" alt=""></a>
+            </div>
+            <p class="disclaimer">Meta Platforms Inc., Facebook и Instagram <br> запрещены в РФ в связи с экстремистской деятельностью</p>
             </div>
         </footer>
 
