mobile adaptation update

--- a/index.html
+++ b/index.html
@@ -358,6 +358,7 @@
                 <a href="#" class="footer-link">дизайн</a>
                 <a href="#" class="footer-link">3D - моделирование</a>
                 <a href="#" class="footer-link">таджвид</a>
+                <a href="#" class="footer-link">английский язык</a>
             </div>
             <div class="footer-text__inner">
                 <h6 class="footer-title">о нас</h6>
