web course update

--- a/index.html
+++ b/index.html
@@ -92,11 +92,15 @@
                 <a href="#" class="capsule-button">HTML</a>
                 <a href="#" class="capsule-button">CSS</a>
                 <a href="#" class="capsule-button">FlexBox</a>
+                <a href="#" class="capsule-button">SASS</a>
+                <a href="#" class="capsule-button">Инструменты разработчика</a>
+                <a href="#" class="capsule-button">Git</a>
                 <a href="#" class="capsule-button">GitHub</a>
+                <a href="#" class="capsule-button">Основы кибербезопасности</a>
                 <a href="#" class="capsule-button">JavaScript</a>
                 <a href="#" class="capsule-button">ООП</a>
-                <a href="#" class="capsule-button">5412₽</a>
-
+                <a href="#" class="capsule-button">SEO</a>
+                <a href="#" class="capsule-button">BEM</a>
             </div>
             <div class="course-bottom">
                 <h2 class="title">РАЗРАБОТКА <br> САЙТОВ</h2>
