web course update

--- a/index.html
+++ b/index.html
@@ -210,13 +210,18 @@
             <div class="course-top">
                 <a href="#" class="capsule-button">90 минут занятие</a>
                 <a href="#" class="capsule-button">6 месяцев обучение</a>
-                <a href="#" class="capsule-button">HTML</a>
-                <a href="#" class="capsule-button">CSS</a>
-                <a href="#" class="capsule-button">FlexBox</a>
-                <a href="#" class="capsule-button">GitHub</a>
-                <a href="#" class="capsule-button">JavaScript</a>
-                <a href="#" class="capsule-button">ООП</a>
-                <a href="#" class="capsule-button">5412₽</a>
+                <a href="#" class="capsule-button">Огласовки</a>
+                <a href="#" class="capsule-button">Межзубные букв</a>
+                <a href="#" class="capsule-button">Твердые буквы</a>
+                <a href="#" class="capsule-button">Обособленная форма</a>
+                <a href="#" class="capsule-button">Начальная форма букв</a>
+                <a href="#" class="capsule-button">Танвин</a>
+                <a href="#" class="capsule-button">Серединная форма букв</a>
+                <a href="#" class="capsule-button">Ташдид</a>
+                <a href="#" class="capsule-button">Конечная форма букв</a>
+                <a href="#" class="capsule-button">Буквы мадда</a>
+                <a href="#" class="capsule-button">Сукун</a>
+                <a href="#" class="capsule-button">Мадды</a>
             </div>
             <div class="course-bottom">
                 <h2 class="title">ТАДЖВИД</h2>
@@ -233,7 +238,7 @@
                         <p class="course-subtitle">25 мая 2024 года</p>
                         <p class="course-subtitle">6 месяцев</p>
                         <p class="course-subtitle">онлайн</p>
-                        <p class="course-subtitle">4820₽</p>
+                        <p class="course-subtitle">5028₽</p>
                     </div>
                     
                 </div>
@@ -245,13 +250,17 @@
             <div class="course-top">
                 <a href="#" class="capsule-button">90 минут занятие</a>
                 <a href="#" class="capsule-button">6 месяцев обучение</a>
-                <a href="#" class="capsule-button">HTML</a>
-                <a href="#" class="capsule-button">CSS</a>
-                <a href="#" class="capsule-button">FlexBox</a>
-                <a href="#" class="capsule-button">GitHub</a>
-                <a href="#" class="capsule-button">JavaScript</a>
-                <a href="#" class="capsule-button">ООП</a>
-                <a href="#" class="capsule-button">5412₽</a>
+                <a href="#" class="capsule-button">Грамматика</a>
+                <a href="#" class="capsule-button">Практика разговорного</a>
+                <a href="#" class="capsule-button">Чтение и письмо</a>
+                <a href="#" class="capsule-button">Технический английский</a>
+                <a href="#" class="capsule-button">Лексика</a>
+                <a href="#" class="capsule-button">Произношение</a>
+                <a href="#" class="capsule-button">Тестирование</a>
+                <a href="#" class="capsule-button">Деловой английский</a>
+                <a href="#" class="capsule-button">Местоимения</a>
+                <a href="#" class="capsule-button">Модальные глаголы</a>
+ 
             </div>
             <div class="course-bottom">
                 <h2 class="title">АНГЛИЙСКИЙ <br> ЯЗЫК</h2>
