--- a/index.html
+++ b/index.html
@@ -35,9 +35,10 @@
         <nav class="course-nav">
             <a href="#" class="course-button black-bg">Главная</a>
             <a href="#" class="course-button"><img src="assets/icons/dev-icon.svg" alt="" class="icon course-icon">Разработка</a>
-            <a href="#" class="course-button"><img src="assets/icons/grap_des-icon.svg" alt="" class="icon course-icon">Графический дизайн</a>
             <a href="#" class="course-button"><img src="assets/icons/book-icon.svg" alt="" class="icon course-icon">Таджвид</a>
-            <a href="#" class="course-button"><img src="assets/icons/3D-icon.svg" alt="" class="icon course-icon">3D - Моделирование</a>
+            <a href="#" class="course-button"><img src="assets/icons/grap_des-icon.svg" alt="" class="icon course-icon">Графический дизайн</a>
+            <a href="#" class="course-button"><img src="assets/icons/3D-icon.svg" alt="" class="icon course-icon">3D Разработка</a>
+            <a href="#" class="course-button"><img src="assets/icons/3D-icon.svg" alt="" class="icon course-icon">Английский язык</a>
             <!-- <a href="#" class="course-button"><img src="assets/icons/UI_UX-icon.png" alt="" class="icon course-icon">UI / UX</a> -->
             <!-- <a href="#" class="course-button"><img src="assets/icons/project-icon.svg" alt="" class="icon course-icon">Проектная деятельность</a> -->
 
