--- a/index.html
+++ b/index.html
@@ -10,8 +10,42 @@
 </head>
 <body>
     
+<!-- FORMS -->
+
+    <div class="form">
+        <div class="form-bg-blur"></div>
+        <div class="form__inner">
+            <div class="form-top">
+                <button class="close-button"></button>
+                <div class="form-text__inner">
+                    <h2 class="title forms-title">ЗАЯВКА НА КУРС</h2>
+                    <p class="forms-subitle"># ВЕБ РАЗРАБОТКА</p>
+                </div>
+            </div>
+            <form action="mailto:html@yandex.ru" enctype="text/plain" class="form-bottom">
+                <div class="label__inner">
+                    <label>
+                        ИМЯ
+                        <input type="text" name="name" required>
+                      </label>
+                      <div class="breaker">br</div>
+                      <label>
+                         ФАМИЛИЯ
+                        <input type="text" name="surname" required>
+                      </label>
+                </div>
+                <label>
+                    НОМЕР ТЕЛЕФОНА
+                    <input type="text" name="phonenumber" required>
+                </label>
+                
+                <button type="submit" class="forms-button">записаться</button>
+              </form>
+        </div>
+    </div>
+
 <a href="#" class="link">
-    <div class="adver">приведи клиента и получи 5000₽</div>
+    <div class="stroke-banner">приведи клиента и получи 5000₽</div>
 </a> 
 
 <div class="container">
