--- a/index.html
+++ b/index.html
@@ -198,9 +198,9 @@
             <a href="#" class="course-button black-bg">Главная</a>
             <a href="#" class="course-button"><img src="assets/icons/dev-icon.svg" alt="" class="icon course-icon">Разработка</a>
             <a href="#" class="course-button"><img src="assets/icons/book-icon.svg" alt="" class="icon course-icon">Таджвид</a>
-            <a href="#" class="course-button"><img src="assets/icons/grap_des-icon.svg" alt="" class="icon course-icon">Графический дизайн</a>
-            <a href="#" class="course-button"><img src="assets/icons/3D-icon.svg" alt="" class="icon course-icon">3D Разработка</a>
-            <a href="#" class="course-button"><img src="assets/icons/3D-icon.svg" alt="" class="icon course-icon">Английский язык</a>
+            <a href="#" class="course-button"><img src="assets/icons/3D-icon.svg" alt="" class="icon course-icon">3D</a>
+            <a href="#" class="course-button"><img src="assets/icons/grap_des-icon.svg" alt="" class="icon course-icon">Дизайн</a>
+            <a href="#" class="course-button"><img src="assets/icons/book-icon.svg" alt="" class="icon course-icon">Английский</a>
             <!-- <a href="#" class="course-button"><img src="assets/icons/UI_UX-icon.png" alt="" class="icon course-icon">UI / UX</a> -->
             <!-- <a href="#" class="course-button"><img src="assets/icons/project-icon.svg" alt="" class="icon course-icon">Проектная деятельность</a> -->
 
@@ -213,7 +213,7 @@
 
         <section class="main-banner">
             <h2 class="title">Не просто <br> школа, а <br> целая семья</h2>
-            <p class="subtitle">Мы строим будущее, стирая границы.<br>Новый подход к обучению</p>
+            <p class="subtitle">Запишись на пробное занятие и получи бесплатную консультацию</p>
             <a href="#" class="button">узнать больше</a>
         </section>
 
