--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
             <div class="header__inner">
                 <a href="#" class="link">обучение</a>
                 <a href="#" class="link">все курсы</a>
-                <a href="#" class="link awards-link">награды</a>
+                <a href="#" class="link">награды</a>
                 <a href="#" class="link">сообщество</a>
             </div>
 
@@ -195,7 +195,8 @@
         </header>
     
         <nav class="course-nav">
-            <a href="#" class="course-button black-bg">Главная</a>
+            <a href="#" class="course-button black-bg menu-button">МЕНЮ</a>
+            <a href="#" class="course-button black-bg course-main">Главная</a>
             <a href="#" class="course-button"><img src="assets/icons/dev-icon.svg" alt="" class="icon course-icon">Разработка</a>
             <a href="#" class="course-button"><img src="assets/icons/book-icon.svg" alt="" class="icon course-icon">Таджвид</a>
             <a href="#" class="course-button"><img src="assets/icons/3D-icon.svg" alt="" class="icon course-icon">3D</a>
@@ -270,10 +271,10 @@
 
                 <div class="course-text__inner">
                     <div class="course-text">
-                        <p class="course-subtitle course-opacity">старт:</p>
-                        <p class="course-subtitle course-opacity">длительность:</p>
-                        <p class="course-subtitle course-opacity">тип:</p>
-                        <p class="course-subtitle course-opacity">стоимость:</p>
+                        <p class="course-subtitle">старт:</p>
+                        <p class="course-subtitle">длительность:</p>
+                        <p class="course-subtitle">тип:</p>
+                        <p class="course-subtitle">стоимость:</p>
                     </div>
 
                     <div class="course-text">
@@ -312,10 +313,10 @@
 
                 <div class="course-text__inner">
                     <div class="course-text">
-                        <p class="course-subtitle course-opacity">старт:</p>
-                        <p class="course-subtitle course-opacity">длительность:</p>
-                        <p class="course-subtitle course-opacity">тип:</p>
-                        <p class="course-subtitle course-opacity">стоимость:</p>
+                        <p class="course-subtitle ">старт:</p>
+                        <p class="course-subtitle ">длительность:</p>
+                        <p class="course-subtitle ">тип:</p>
+                        <p class="course-subtitle ">стоимость:</p>
                     </div>
 
                     <div class="course-text">
@@ -351,10 +352,10 @@
 
                 <div class="course-text__inner">
                     <div class="course-text">
-                        <p class="course-subtitle course-opacity">старт:</p>
-                        <p class="course-subtitle course-opacity">длительность:</p>
-                        <p class="course-subtitle course-opacity">тип:</p>
-                        <p class="course-subtitle course-opacity">стоимость:</p>
+                        <p class="course-subtitle">старт:</p>
+                        <p class="course-subtitle">длительность:</p>
+                        <p class="course-subtitle">тип:</p>
+                        <p class="course-subtitle">стоимость:</p>
                     </div>
 
                     <div class="course-text">
@@ -391,10 +392,10 @@
 
                 <div class="course-text__inner">
                     <div class="course-text">
-                        <p class="course-subtitle course-opacity">старт:</p>
-                        <p class="course-subtitle course-opacity">длительность:</p>
-                        <p class="course-subtitle course-opacity">тип:</p>
-                        <p class="course-subtitle course-opacity">стоимость:</p>
+                        <p class="course-subtitle">старт:</p>
+                        <p class="course-subtitle">длительность:</p>
+                        <p class="course-subtitle">тип:</p>
+                        <p class="course-subtitle">стоимость:</p>
                     </div>
 
                     <div class="course-text">
@@ -430,10 +431,10 @@
 
                 <div class="course-text__inner">
                     <div class="course-text">
-                        <p class="course-subtitle course-opacity">старт:</p>
-                        <p class="course-subtitle course-opacity">длительность:</p>
-                        <p class="course-subtitle course-opacity">тип:</p>
-                        <p class="course-subtitle course-opacity">стоимость:</p>
+                        <p class="course-subtitle">старт:</p>
+                        <p class="course-subtitle">длительность:</p>
+                        <p class="course-subtitle">тип:</p>
+                        <p class="course-subtitle">стоимость:</p>
                     </div>
 
                     <div class="course-text">
