chat buttona dded

--- a/index.html
+++ b/index.html
@@ -609,6 +609,4 @@
         }   
     }
     </script>
-
-</body>
-</html>
+<script>(function(a,m,o,c,r,m){a[m]={id:"412291",hash:"bb022561b65cfe8764ddea8c1390f4af9ca38f1022f7882a68e11cee5537519e",locale:"ru",inline:false,setMeta:function(p){this.params=(this.params||[]).concat([p])}};a[o]=a[o]||function(){(a[o].q=a[o].q||[]).push(arguments)};var d=a.document,s=d.createElement('script');s.async=true;s.id=m+'_script';s.src='https://gso.amocrm.ru/js/button.js';d.head&&d.head.appendChild(s)}(window,0,'amoSocialButton',0,0,'amo_social_button'));</script></html>
