--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
         <header class="header">
             <img src="assets/logo.svg" alt="" class="logo">
             <div class="header__inner">
-                <a href="#" class="link">обучение</a>
+                <a href="#" class="link l-highlight">главная</a>
                 <a href="#" class="link">все курсы</a>
                 <a href="#" class="link">награды</a>
-                <a href="#" class="link">сообщество</a>
+                <a href="rating.html" class="link">рейтинг</a>
             </div>
 
             <div class="header-button__inner">
