--- a/rating.html
+++ b/rating.html
@@ -12,14 +12,20 @@
     
 <div class="container">
         <header class="header">
-            <img src="assets/logo.svg" alt="" class="logo">
+            <img src="assets/logo.svg" alt="" class="logo mobile-disable-logo">
+
+            <div class="mobile-menu">
+                <img src="assets/logo.svg" alt="" class="logo">
+                <a href="#" class="course-button black-bg menu-button">МЕНЮ</a>
+           </div>
+
             <div class="header__inner">
                 <a href="index.html" class="link">главная</a>
                 <a href="#" class="link">все курсы</a>
                 <a href="#" class="link">награды</a>
                 <a href="#" class="link l-highlight">рейтинг</a>
+                
             </div>
-
             <div class="header-button__inner">
                 <a href="#" class="link header-link">+7(938)015-00-80</a>
                 <a href="#" class="button">записаться</a>
