new section, also deleted useless media

--- a/index.html
+++ b/index.html
@@ -294,11 +294,13 @@
         <div class="sub-banner__inner">         
     
             <section class="sub-banner half-banner" id="banner-bg1">
+                <img src="assets/icons/zap.svg" alt="" class="icon banner-icon">
                 <h1 class="title-mid "><span class="bold">Школьнику</span>, который хочет получить востребованную IT-профессию</h1>
                 <p class="subtitle-mid">Идеальный старт в мире информационных технологий для амбициозных школьников! Получите востребованную IT-профессию уже сегодня!</p>
             </section>
     
             <section class="sub-banner half-banner" id="banner-bg2">
+                <img src="assets/icons/upchart.svg" alt="" class="icon banner-icon">
                 <h1 class="title-mid "><span class="bold">Студенту</span>, который хочет поменять курс своей карьеры в сторону IT</h1>
                 <p class="subtitle-mid">Освойте новые навыки и станьте востребованным специалистом в сфере IT. Успешный карьерный старт исключительно для вас!</p>
             </section>
@@ -306,8 +308,39 @@
         </div>
 
         <section class="sub-banner banner-bg" id="banner-bg3">
+            <img src="assets/icons/smile.svg" alt="" class="icon banner-icon">
             <h1 class="title-mid "><span class="bold">Кому угодно</span>, — в нашей школе <br> нет ограничений.</h1>
         </section>
+
+        <h2 class="title section-title">КАК ПРОХОДИТ ОБУЧЕНИЕ?</h2>
+
+        <section class="ed-info">
+            <div class="ei-left">
+                <div class="ei-left__row">
+                    <div class="ei-left-card ei-card1">
+                        <h1 class="title-mid "><span class="bold">Живые</span> занятия</h1>
+                        <p class="subtitle-mid ei-sub">2 занятия, 2 раза в неделю. 90 минут каждое.</p>
+                    </div>
+                </div>
+                <div class="ei-left__row">
+                    <div class="ei-left-card ei-card2">
+                        <h1 class="title-mid "><span class="bold">Интерактивная</span><br> домашка</h1>
+                        <p class="subtitle-mid ei-sub">На удобной платформе с системой баллов и рейтинга</p>
+                    </div>
+                    <div class="ei-left-card ei-card3">
+                        <h1 class="title-mid "><span class="bold">Тонна</span> ресурсов</h1>
+                        <p class="subtitle-mid ei-sub">Каналы, видеоуроки, статьи, книги и многое другое собранное нашими экспертами. Для наших студентов. Бесплатно</p>
+                    </div>
+                </div>
+            </div>
+            <div class="ei-right">
+                <div class="ei-right-card ei-card4">
+                    <h1 class="title-mid"><span class="bold">Проверка</span> знаний</h1>
+                        <p class="subtitle-mid ei-sub">Промежуточная аттестация, которая даст понять на каком уровне вы находитесь!</p>
+                </div>
+            </div>
+        </section>
+
 
         <h2 class="title left-title">Часто задаваемые <br> вопросы</h2>
 
