temp lennis disable

--- a/index.html
+++ b/index.html
@@ -441,7 +441,7 @@
 
 <script src="scripts/main.js"></script>
 <script>(function(a,m,o,c,r,m){a[m]={id:"412291",hash:"bb022561b65cfe8764ddea8c1390f4af9ca38f1022f7882a68e11cee5537519e",locale:"ru",inline:false,setMeta:function(p){this.params=(this.params||[]).concat([p])}};a[o]=a[o]||function(){(a[o].q=a[o].q||[]).push(arguments)};var d=a.document,s=d.createElement('script');s.async=true;s.id=m+'_script';s.src='https://gso.amocrm.ru/js/button.js';d.head&&d.head.appendChild(s)}(window,0,'amoSocialButton',0,0,'amo_social_button'));</script>
-<script src="https://unpkg.com/lenis@1.1.9/dist/lenis.min.js"></script> 
+<!-- <script src="https://unpkg.com/lenis@1.1.9/dist/lenis.min.js"></script> 
 
 <script>
     const lenis = new Lenis()
@@ -456,6 +456,6 @@
     }
 
     requestAnimationFrame(raf)
-    </script>
+    </script> -->
 
 </html>
